# Facet

./: .gitattributes  .gitignore  .go-toolchain  BUILDING.md  CLAUDE.md  LICENSE  Makefile  README.md  facet_cxx.js  facet_cxx.wasm  go.mod  go.sum  index.html  third_party
.github/: .cache-verify  CODEOWNERS
.github/scripts/: check-workflow-diff.sh  check-workflow-diff.test.sh
.github/workflows/: .diag-trigger  build.yml  ci.yml  guards.yml  profile-linux.yml  profile-windows.yml  release.yml
app/: app.go  app_export.go  app_library.go  app_menu.go  assistant.go  assistant_mcp.go  assistant_service.go  config_store.go  entry_points.go  entry_points_test.go  eval_handler.go  eval_service.go  filemanager.go  http_server.go  http_server_test.go  library_manager.go  main.go  mcp_service.go  slicer.go  wails.json  webview_linux.go
app/docs/: ai-prompt.md  color-guide.md  dimensioning-guide.md  docs.go  drawing-guide.md  language-reference.md  users-guide.md
app/examples/: Bolt And Nut.fct  Boolean Showcase.fct  Bricks.fct  Canonical Duals.fct  Chain.fct  Chess Pawn.fct  Claude.fct  Color Cube.fct  Fastener Showcase.fct  Fuzzy Bear.fct  Grid.fct  House Key.fct  Moon.fct  Shark.fct  Spiral Text.fct  Tutorial.fct
app/frontend/: index.html  package-lock.json  package.json
app/pkg/manifold/cxx/: CMakeLists.txt
app/pkg/manifold/cxx/include/: facet_cxx.h
app/pkg/manifold/cxx/src/: bindings.cpp  polymesh.cpp  text.cpp
cmd/facet-mcp/: main.go
cmd/facetc/: main.go  main_test.go
cmd/facetdoc/: main.go
cmd/facetrender/: animation_test.go  main.go  main_test.go
cmd/scad2facet/: main.go
desktop/: app.go  app_export.go  app_export_test.go  app_library.go  app_menu.go  app_open_test.go  app_recording_test.go  app_share.go  app_share_test.go  assistant.go  assistant_claude.go  assistant_claude_integration_test.go  assistant_claude_test.go  assistant_generic.go  assistant_generic_test.go  assistant_iface.go  assistant_iface_test.go  assistant_service.go  assistant_service_test.go  assistant_test.go  assistant_testhelpers_test.go  automation.go  automation_flag.go  automation_flag_stub.go  automation_flag_test.go  automation_stub.go  automation_test.go  bounds.go  config_store.go  control_handler.go  control_handler_test.go  control_stub.go  ctx_race_test.go  entry_points.go  entry_points_animation_test.go  eval_handler.go  eval_handler_smoke_test.go  eval_service.go  frame_handler.go  frame_handler_test.go  (+24 more)
desktop/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/quicklook/: FacetMesh.swift  Preview-Info.plist  PreviewViewController.swift  Thumbnail-Info.plist  ThumbnailProvider.swift  extension.entitlements
desktop/testdata/: stream-json-protocol.md
docs/: architecture.md
packaging/linux/: README.md  facet.thumbnailer  (+2 more)
pkg/manifold/cxx/: CMakeLists.txt
pkg/manifold/cxx/include/: facet_cxx.h
pkg/manifold/cxx/src/: bindings.cpp  bindings_booleans.cpp  bindings_callbacks.cpp  bindings_extract.cpp  bindings_extrude.cpp  bindings_ops.cpp  bindings_queries.cpp  bindings_transforms.cpp  internal.h  polymesh.cpp  text.cpp
plans/: 2026-04-16-units-strict.md
preview/: facet_cxx.js  facet_cxx.wasm  wasm.html
reviews/: 2026-04-16-main-branch.md
scripts/: _third-party-versions.sh  build-manifold.sh  build-quicklook.sh  build-wasm.sh  check-shims.go  fake-pkg-config.sh  gen-wailsjs-stubs.sh  serve-web.go  setup-go.sh  sign-app.sh
web/: facet_cxx.js  facet_cxx.wasm  index.html  wasm.html
(+658 files in other folders)
